welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:1: error: ';' expected but ')' found.
def in3050(a:Int, b:Int):Boolean = {return ((estDans(a,30,40))&&(estDans(b,30,40)))||(estDans(b,40,50))&&(estDans(b,40,50)))}
                                                                                                                           ^